[WHLSL] Expressions can't be copyable https://bugs.webkit.org/show_bug.cgi?id=194116

Reviewed by Keith Rollin.

Expressions have UniqueRef members, which can't be copied. Describe this constraint explicitly rather than implicitly.

No new tests because there is no behavior change.

* Modules/webgpu/WHLSL/AST/WHLSLEnumerationMemberLiteral.h:
* Modules/webgpu/WHLSL/AST/WHLSLExpression.h:

Canonical link: https://commits.webkit.org/208609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240836 268f45cc-cd09-0410-ab3c-d52691b4dbfc